--- a/case-air-sierra.html
+++ b/case-air-sierra.html
@@ -81,8 +81,14 @@
 	</div>
 
 
-	<div class="section">
-	</div>
+		<div class="container section">
+			<div class="row">
+				<div class="col-md-8 ml-auto mr-auto text-center">
+					<img src="img/BioTherm_OptimizedAir.png" style="max-width:300px;" class="img-fluid">
+					<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
+				</div>
+			</div>
+		</div>
 
 </div>
 
