--- a/case-heat-micheals.html
+++ b/case-heat-micheals.html
@@ -81,7 +81,7 @@
 		<div class="col-md-8">
 			<figure class="figure d-block">
 			  <img src="img/case_micheals.jpg" class="figure-img img-fluid rounded" alt=""/>
-			  heat_ov_Duofin-Top-Heat.jpg
+			  <figcaption class="figure-caption text-right">Patrick Herzing, General Manager</figcaption>
 			</figure>
 		</div>
 	</div>
@@ -137,6 +137,7 @@
 	<div class="container section">
 		<div class="row">
 			<div class="col-md-8 ml-auto mr-auto text-center">
+				<img src="img/BioTherm_HeatingSystems.png" style="max-width:300px;" class="img-fluid">
 				<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
 			</div>
 		</div>
