--- a/case-heat-orozco.html
+++ b/case-heat-orozco.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Optimized Air | BioTherm Solutions</title>
+	<title>Case Study: Manfred Orozco - Manfred and Son’s | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,119 +42,124 @@
 	</div>
 </nav>
 
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-tech.jpg'); ">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#ed1c24;">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
-			</div>
-		</div>
-		<!--<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>-->
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
 
-	<div class="container section">
+<div class="container section">
+	
+	<div class="row">
+		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+			<img src="img/front-climate-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+			<h3><b>Manfred Orozco</b> <br />Manfred and Son’s Greenhouse, Annapolis, MD<br /><b>Improving Health and Yields</b></h3>
+			</span>
+			<span class="d-block p-2 bg-heat text-white"></span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<figure class="figure d-block">
+			  <img src="img/case_manfred.jpg" class="figure-img img-fluid rounded" alt="">
+			  <figcaption class="figure-caption text-right">Randy Strode, Owner</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p>Looking over his mounting fuel bills, Manfred Orozco was frustrated year after year by all the heat trapped above his greenhouse while his plants were in raised beds. He had problems with stunted roots, uneven growth, and cold spots.</p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
+			<p>Manfred called 1-800-GET-HEAT and his BioTherm consultant recommended a bed heating system. The BioTherm rep explained how MegaTube buried in the soil below the root line could bring the media temperature up in his raised beds.</p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
+			<p>By placing heat exactly where it is needed, at the root zone, Manfred’s greenhouse uses a fifth of the fuel, saving them over 80% on their bill. They can now use this money on other projects in the green- house. Because he was able to set an opti- mum root zone temperature, his plants are robust and healthy, have less disease, all with quicker turns and better profits. The greenhouse no longer has cold spots, and Manfred has a healthier and more consis- tent cannabis crop.</p>
+			<p>The MegaTube Bed Heating System is a network of high performance and durable tubing, evenly spaced, and buried in the</p>
+		</div>
+		<div class="col-md-4">	
+			<p>growing medium. This system is designed to be tough and proven to last years with minimal maintenance.</p>
+			<p>The tubes are connected to special mani folds that balance the flow of warm water produced by a Raypak highly efficient con densing boiler system.</p>
+			<p>BioTherm shipped all technical compo nents pre-assembled for easy installation. Because BioTherm supplied clear instruc tions and technical drawings, Manfred’s crew had no problems installing the bed heating system. He also felt comfortable because an experienced technician was just a phone call away.</p>
+		</div>
+
+	</div>
+
+	<div class="section">
 		<div class="row">
-			<div class="col-md-6">
-				<h3><b>Conditioning</b></h3>
-				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
-				<h3><b>Dehumidification</b></h3>
-				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
-				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
-				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
-			</div>
-			<div class="col-md-6">
-				<h3><b>CO<sub>2</sub> Enrichment</b></h3>
-				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
-				<h3><b>Sanitization and Filtration</b></h3>
-				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
+			<div class="col-md-12">
+				<span class="d-block p-5 bg-dark text-white">
+				<h3><b>“With my BioTherm Bed Heating System, I have grown my most consistent and highest quality crop.”</b><br /><br /><span class="float-right">—Manfred Orozco, Manfred and Son’s Greenhouse</span></h3>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 		</div>
 		<div class="row">
-
 			
+			<div class="col-md-4">
+				<br />
+				<figure class="figure d-block">
+					<a href="img/case_noak_sunfin.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/case_orozco_cana.jpg" class="figure-img img-fluid rounded" alt=""/>
+					</a>
+					<figcaption class="figure-caption text-right">BioTherm Raised Bed Megatube Heat System results in rapid growth, healthy plants.</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-8">
+				<figure class="figure d-block">
+					<figcaption class="figure-caption text-right"><h4><b>Raised Bed MegaTube Heat System</b></h4></figcaption>
+					<img src="img/case_orozco_bed.jpg" class="figure-img img-fluid rounded" alt=""/>
+				</figure>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<h4><b>5 Major Benefits for Cannabis</b></h4>
+			<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+		</div>
+		<div class="row section">
+			<div class="col">
+				<p><b>1.</b> When plants have properly heated root systems, they can maximize nutrient absorption. Plant root temperature acts like the throttle, and so long as the heat is a constant presence, it can double growth rates. In fact, root zone heat is the key determinant of the speed of the growth cycle, so long as the other needs of the plants are at least basically taken care of.</p>
+			</div>
+			<div class="col">
+				<p><b>2.</b> Plants with nice warm roots reach the biggest possible size. In fact, research shows that the biochemical processes that sustain a healthy cannabis harvest are based almost entirely on the root zone environment. So long as the leaf tissue does not freeze, photosynthesis cycles complete more quickly when root temperature is constant, giving the plant a much bigger size potential.</p>
+			</div>
+			<div class="col">
+				<p><b>3.</b> When a plant cannot easily maintain a warm root temperature, it experiences a high level of stress. This stress weakens the plant’s immune system and makes it vulnerable to diseases and parasites. Properly warmed roots, on the other hand, have a high resistance to potentially harmful microbes. In fact, at 72oF, the ideal root temperature for cannabis plants, the temperature actually cultivates helpful microbes in the soil known to form symbiotic relationships with the plant for additional resistance.</p>
+			</div>
+			<div class="col">
+				<p><b>4.</b> The cost of heating a greenhouse to a consistent temperature using traditional forced air heating methods can be exorbitant, especially at night. The irregular airflow of these systems create pockets of cool air which require higher energy expenditures to reach and warm. BioTherm systems use hydronic heating, which heats uniformly, saving energy by avoiding pockets of cold air, and allowing the ambient air temperature to be cooler.</p>
+			</div>
+			<div class="col">
+				<p><b>5.</b> When you use BioTherm’s root zone hydronic heating systems, you can experi- ence a huge drop in energy costs--in some cases by as much as 50%. This saves you additional money beyond that saved by using sunlight in a green- house setting. When you combine these savings with the additional revenue gained from more frequent, greater harvests, the additional profits can be staggering.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+			<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
 		</div>
 	</div>
 	
-	
 	<div class="container section">
 		<div class="row">
-			<div class="col-md-12">
-				<h3><b>Case Studies:</b></h3>
+			<div class="col-md-8 ml-auto mr-auto text-center">
+				<img src="img/BioTherm_HeatingSystems.png" style="max-width:300px;" class="img-fluid">
+				<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<a href="case-air-sunnyside.html">
-				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_sunnyside.jpg" class="figure-img img-fluid rounded" alt="">
-					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-					<h4><b>Nancy Duvall</b> <br />Sunnyside Farms, CA <br /><b>Increased Yield and Faster Growth</b></h4>
-				</span>
-				</a>
-				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<a href="case-air-sierra.html">
-				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_sierra.jpg" class="figure-img img-fluid rounded" alt="">
-					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-					<h4><b>Sierra Gold Nursery</b> <br />Sutter County, CA <br /><b>BioTherm Cooling and Heating System</b></h4>
-				</span>
-				</a>
-				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-success">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Dehu" data-toggle="tab">DehuKing</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Chill" data-toggle="tab">ChillKing</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Dehu">
-								<p>DehuKing offers free-standing, self-contained dehumidification systems. Optimize the air in your growing environment with a dehumidifier that also filters, ionizes, and sanitizes. Multiple options available to customize your dehumidification.</p>
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-							<div class="tab-pane" id="CHill">
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container section">
-			<div class="row">
-				<div class="col-md-8 ml-auto mr-auto text-center">
-					<img src="img/BioTherm_OptimizedAir.png" style="max-width:300px;" class="img-fluid">
-					<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
-				</div>
-			</div>
-		</div>
+	</div>
+	
 
 
-	</div>	
+</div>
+
 </div>
 
 <!--     *********    FOOTER     *********      -->
@@ -187,17 +192,17 @@
 			</ul>
 		</div>
 		<div class="col-md-3">
-				<h5>Connect</h5>
-				<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
+			<h5>Connect</h5>
+			<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
 				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-				<ul class="social-buttons">
-					<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+			<ul class="social-buttons">
+				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-	
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
@@ -208,7 +213,9 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
