--- a/case-heat-tinsdale.html
+++ b/case-heat-tinsdale.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Optimized Air | BioTherm Solutions</title>
+	<title>Case Study: Beth’s Ornamentals | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,119 +42,119 @@
 	</div>
 </nav>
 
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-tech.jpg'); ">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#ed1c24;">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
-			</div>
-		</div>
-		<!--<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>-->
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
 
-	<div class="container section">
+<div class="container section">
+	
+	<div class="row">
+		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+			<img src="img/front-climate-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+			<h3><b>Beth Tinsdale</b> <br />Beth’s Ornamentals<br />Tacoma, WA <br /><b>Controlling Costs and Improving Consistency</b></h3>
+			</span>
+			<span class="d-block p-2 bg-heat text-white"></span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<figure class="figure d-block">
+			  <img src="img/case_Beth_Tinsdale.jpg" class="figure-img img-fluid rounded" alt="">
+			  <figcaption class="figure-caption text-right">Beth Tinsdale, General Manager</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p>Beth was tired of the changing cost of plugs she purchased for her 5,000 sq.ft. ornamental perennials operation. Further, she couldn’t control the consistency of the product. She wanted to do her own plug propagation.</p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
+			<p>BioTherm provided Beth with an easy-to-install <a href="heat-applications-bench.html"><b>Bench Warmer</b></a> kit that provides gentle and consistent heat for 950 sq.ft. of her metal-topped benches. The durable MicroClimate tubing fit perfectly into the framing, underneath the metal tops, pro- viding a smooth and accessible heated surface. The system is small enough that a traditional tanked hot water heater is a sufficient heat source. Beth is now able to propagate her own perennial starts and control the costs and consistency of her products.</p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
+			<p>The innovative BioTherm Bench Warmer heating system delivers the perfect amount of heat energy right at the bench- top, where the plants grow. The tubing is evenly spaced to ensure even heating with no chance of striping, which is especially important for propagation.</p>
+		</div>
+
+	</div>
+
+	<div class="section">
 		<div class="row">
-			<div class="col-md-6">
-				<h3><b>Conditioning</b></h3>
-				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
-				<h3><b>Dehumidification</b></h3>
-				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
-				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
-				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
-			</div>
-			<div class="col-md-6">
-				<h3><b>CO<sub>2</sub> Enrichment</b></h3>
-				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
-				<h3><b>Sanitization and Filtration</b></h3>
-				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
+			<div class="col-md-12">
+				<span class="d-block p-5 bg-dark text-white">
+				<h3><b>"Since I began growing with BioTherm’s Bench Warmer Kit, I now have consistent quality plug stock.”</b><br /><br /><span class="float-right">—Beth Tinsdale, Beth’s Ornamentals</span></h3>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 		</div>
 		<div class="row">
-
-			
+			<div class="col-md-4">
+				<br />
+				<figure class="figure d-block">
+					<a href="img/case_tinsdale_bench_tube.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/case_tinsdale_bench_tube.jpg" class="figure-img img-fluid rounded" alt=""/>
+					</a>
+					<figcaption class="figure-caption text-right">MicroClimate tubing fits perfectly under the expanded metal bench top.</figcaption>
+				</figure>
+				<figure class="figure d-block">
+					<a href="img/case_tinsdale_tubing.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/case_tinsdale_tubing.jpg" class="figure-img img-fluid rounded" alt=""/>
+					</a>
+					<figcaption class="figure-caption text-right">MicroClimate tubing provides even and consistent heat for Beth’s ornamental plugs.</figcaption>
+				</figure>
+				<figure class="figure d-block">
+					<a href="img/case_tinsdale_micro.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/case_tinsdale_micro.jpg" class="figure-img img-fluid rounded" alt=""/>
+					</a>
+					<figcaption class="figure-caption text-right">The MegaMicro Family of connectors make it easy to install tubing under a bench.</figcaption>
+				</figure>
+				<figure class="figure d-block">
+					<a href="img/case_tinsdale_co2-2.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/case_tinsdale_co2-2.jpg" class="figure-img img-fluid rounded" alt=""/>
+					</a>
+					<figcaption class="figure-caption text-right">BioTherm CO<sub>2</sub> system used for CO<sub>2</sub> production in Fukashima, Japan</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-8">
+				<figure class="figure d-block">
+					<figcaption class="figure-caption text-right"><h4><b>Microclimate Tubing Bench Warmer Kit</b></h4></figcaption>
+					<img src="img/case_tinsdale_bench.jpg" class="figure-img img-fluid rounded" alt=""/>
+				</figure>
+				<span class="d-block p-2 bg-heat text-white"></span>
+				<figure class="figure d-block">
+					<figcaption class="figure-caption text-right"><h4><b>BioTherm CO<sub>2</sub> System</b></h4></figcaption>
+					<img src="img/case_tinsdale_co2.jpg" class="figure-img img-fluid rounded" alt=""/>
+				</figure>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+			<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
 		</div>
 	</div>
 	
-	
 	<div class="container section">
 		<div class="row">
-			<div class="col-md-12">
-				<h3><b>Case Studies:</b></h3>
+			<div class="col-md-8 ml-auto mr-auto text-center">
+				<img src="img/BioTherm_HeatingSystems.png" style="max-width:300px;" class="img-fluid">
+				<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<a href="case-air-sunnyside.html">
-				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_sunnyside.jpg" class="figure-img img-fluid rounded" alt="">
-					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-					<h4><b>Nancy Duvall</b> <br />Sunnyside Farms, CA <br /><b>Increased Yield and Faster Growth</b></h4>
-				</span>
-				</a>
-				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<a href="case-air-sierra.html">
-				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_sierra.jpg" class="figure-img img-fluid rounded" alt="">
-					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-					<h4><b>Sierra Gold Nursery</b> <br />Sutter County, CA <br /><b>BioTherm Cooling and Heating System</b></h4>
-				</span>
-				</a>
-				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-success">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Dehu" data-toggle="tab">DehuKing</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Chill" data-toggle="tab">ChillKing</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Dehu">
-								<p>DehuKing offers free-standing, self-contained dehumidification systems. Optimize the air in your growing environment with a dehumidifier that also filters, ionizes, and sanitizes. Multiple options available to customize your dehumidification.</p>
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-							<div class="tab-pane" id="CHill">
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container section">
-			<div class="row">
-				<div class="col-md-8 ml-auto mr-auto text-center">
-					<img src="img/BioTherm_OptimizedAir.png" style="max-width:300px;" class="img-fluid">
-					<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
-				</div>
-			</div>
-		</div>
+	</div>
+	
 
 
-	</div>	
+</div>
+
 </div>
 
 <!--     *********    FOOTER     *********      -->
@@ -187,17 +187,17 @@
 			</ul>
 		</div>
 		<div class="col-md-3">
-				<h5>Connect</h5>
-				<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
+			<h5>Connect</h5>
+			<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
 				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-				<ul class="social-buttons">
-					<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+			<ul class="social-buttons">
+				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-	
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
@@ -208,7 +208,9 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
