--- a/hydro.html
+++ b/hydro.html
@@ -123,7 +123,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<a href="#">
+					<a href="case-hydro-mansfield.html">
 					<span class="d-block p-4 bg-dark text-white">
 						<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
 						<img src="img/front-hydro-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
@@ -151,6 +151,15 @@
 					</span>
 					</a>
 					<span class="d-block p-2 bg-hydro text-white"></span>
+				</div>
+			</div>
+			
+			<div class="container section">
+				<div class="row">
+					<div class="col-md-8 ml-auto mr-auto text-center">
+						<img src="img/BioTherm_HydroSciences.png" style="max-width:300px;" class="img-fluid">
+						<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
+					</div>
 				</div>
 			</div>
 
