--- a/case-heat-strode.html
+++ b/case-heat-strode.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Optimized Air | BioTherm Solutions</title>
+	<title>Case Study: Randy Strode - Agristarts | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,119 +42,101 @@
 	</div>
 </nav>
 
-<div class="page-header header-small header-filter" data-parallax="true" style=" background-image: url('img/page-tech.jpg'); ">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#ed1c24;">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
-			</div>
-		</div>
-		<!--<div class="row header-image-credit">
-			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
-					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
-				</p>
-			</div>
-		</div>-->
+
 	</div>
 </div>
 
 
 <div class="main main-raised">
 
-	<div class="container section">
+<div class="container section">
+	
+	<div class="row">
+		<div class="col-md-12">
+			<span class="d-block p-4 bg-dark text-white">
+			<img src="img/front-climate-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+			<h3><b>Randy Strode</b> <br />AgriStarts<br />Apopka, FL <br /><b>Investing in the Future</b></h3>
+			</span>
+			<span class="d-block p-2 bg-heat text-white"></span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<figure class="figure d-block">
+			  <img src="img/case_strode.jpg" class="figure-img img-fluid rounded" alt="">
+			  <figcaption class="figure-caption text-right">Randy Strode, Owner</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p>Business was almost going too well for Randy Strode and his son Ty of AgriStarts in Apopka, Florida. Product was in high demand and they knew they were going to need more plant volume while maintaining the already incredible quality and uniformity their cus- tomers had come to expect. Expansion was the answer. They choose BioTherm to design and install the heating system.</p>
+			<p>Agri-Starts may be a tissue culture-to-plug production business, but their needs are not much different from any demanding growing facility. If anything separates </p>
+		</div>
+		<div class="col-md-4">
+			<p>this type of production from that of a finishing greenhouse, it’s that heat is even more important when used as a growing tool (and not just as cold weather protection). Taking the tissue culture from the lab, sticking it in soil media, and getting it to root without disease, and on time, requires precision heat.</p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
+			<p>BioTherm’s finned heat pipe and low water volume not only mean high efficiency, but also quick responses to changes in soil temperatures, helping to maintain that all -important “flat line” result.</p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
+			<p>BioTherm designed AgriStarts’ boiler room with two fan-assisted, low mass boilers and the ability to expand the system to five total boilers when the next 50,000 square feet of greenhouse is built.</p>
+			<p>Good roots are king. The <a href="heat-products-duofin.html">DuoFin Under Bench System</a> that BioTherm installed pulls the roots of the baby plug down, strength- ening them and creating the required tur- gidity—and most importantly doing all this when the grower wants it to happen.</p>
+		</div>
+
+	</div>
+
+	<div class="section">
 		<div class="row">
-			<div class="col-md-6">
-				<h3><b>Conditioning</b></h3>
-				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
-				<h3><b>Dehumidification</b></h3>
-				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
-				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
-				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
-			</div>
-			<div class="col-md-6">
-				<h3><b>CO<sub>2</sub> Enrichment</b></h3>
-				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
-				<h3><b>Sanitization and Filtration</b></h3>
-				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
+			<div class="col-md-12">
+				<span class="d-block p-5 bg-dark text-white">
+				<h3><b>“Quality, consistency and complete uniformity...these are not wants or wishes, but do-or-dies for our business.”</b><br /><br /><span class="float-right">—Randy Strode, AgriStarts</span></h3>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 		</div>
 		<div class="row">
+			<div class="col-md-8">
+				<figure class="figure d-block">
+					<figcaption class="figure-caption text-right"><h4><b>DuoFin Under Bench</b></h4></figcaption>
+					<img src="img/case_strodes_bench.jpg" class="figure-img img-fluid rounded" alt=""/>
+				</figure>
+			</div>
+			<div class="col-md-4">
+				<br />
+				<figure class="figure d-block">
+					<a href="img/case_strodes_duo.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
+					<img src="img/case_strodes_duo.jpg" class="figure-img img-fluid rounded" alt=""/>
+					</a>
+					<figcaption class="figure-caption text-right">Vertical DuoFin System</figcaption>
+				</figure>
 
+			</div>
 			
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+			<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
 		</div>
 	</div>
 	
-	
 	<div class="container section">
 		<div class="row">
-			<div class="col-md-12">
-				<h3><b>Case Studies:</b></h3>
+			<div class="col-md-8 ml-auto mr-auto text-center">
+				<img src="img/BioTherm_HeatingSystems.png" style="max-width:300px;" class="img-fluid">
+				<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
-				<a href="case-air-sunnyside.html">
-				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_sunnyside.jpg" class="figure-img img-fluid rounded" alt="">
-					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-					<h4><b>Nancy Duvall</b> <br />Sunnyside Farms, CA <br /><b>Increased Yield and Faster Growth</b></h4>
-				</span>
-				</a>
-				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<a href="case-air-sierra.html">
-				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_sierra.jpg" class="figure-img img-fluid rounded" alt="">
-					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-					<h4><b>Sierra Gold Nursery</b> <br />Sutter County, CA <br /><b>BioTherm Cooling and Heating System</b></h4>
-				</span>
-				</a>
-				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-success">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Dehu" data-toggle="tab">DehuKing</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Chill" data-toggle="tab">ChillKing</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Dehu">
-								<p>DehuKing offers free-standing, self-contained dehumidification systems. Optimize the air in your growing environment with a dehumidifier that also filters, ionizes, and sanitizes. Multiple options available to customize your dehumidification.</p>
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-							<div class="tab-pane" id="CHill">
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container section">
-			<div class="row">
-				<div class="col-md-8 ml-auto mr-auto text-center">
-					<img src="img/BioTherm_OptimizedAir.png" style="max-width:300px;" class="img-fluid">
-					<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
-				</div>
-			</div>
-		</div>
+	</div>
+	
 
 
-	</div>	
+</div>
+
 </div>
 
 <!--     *********    FOOTER     *********      -->
@@ -187,17 +169,17 @@
 			</ul>
 		</div>
 		<div class="col-md-3">
-				<h5>Connect</h5>
-				<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
+			<h5>Connect</h5>
+			<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
 				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
-				<ul class="social-buttons">
-					<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+			<ul class="social-buttons">
+				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-	
+
 </div>
 </footer>
 <!--     *********   END FOOTER     *********      -->
@@ -208,7 +190,9 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
