--- a/heat.html
+++ b/heat.html
@@ -164,7 +164,7 @@
 			<div class="col-md-4">
 				<a href="case-heat-micheals.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_micheals_cover.jpg" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Patrick Herzing</b> <br />Michael’s Greenhouses<br />Cheshire, CT <br /><b>Improving Turns and Planning for the Future</b></h4>
 				</span>
@@ -172,57 +172,68 @@
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 			<div class="col-md-4">
+				<a href="case-heat-tinsdale.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_Beth_Tinsdale.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_Beth_Tinsdale.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Beth Tinsdale</b> <br />Beth’s Ornamentals<br />Tacoma, WA <br /><b>Controlling Costs and Improving Consistency</b></h4>
 				</span>
+				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 			<div class="col-md-4">
+				<a href="case-heat-allen.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_allen_tiffany.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Tiffany Allen</b> <br />Best Taste Tomatoes<br />Windsor, CA <br /><b>Improving Heating Costs and Plant Health</b></h4>
 				</span>
+				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 		</div>
 		<br />
 		<div class="row">
 			<div class="col-md-4">
+				<a href="case-heat-strode.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_strode.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Randy Strode</b> <br />AgriStarts<br />Apopka, FL <br /><b>Investing in the Future</b></h4>
 				</span>
+				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 			<div class="col-md-4">
+				<a href="case-heat-noak.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_micheals_flowers.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Bill Noak</b> <br />Nor’Eastern Farms<br />Lowell, MA <br /><b>Upgrading for Success</b></h4>
 				</span>
+				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 			<div class="col-md-4">
+				<a href="case-heat-orozco.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_manfred.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Manfred Orozco</b> <br />Manfred and Son’s Greenhouse, Annapolis, MD<br /><b>Improving Health and Yields</b></h4>
 				</span>
+				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 		</div>
 		
-		<div class="container section">
-			<div class="row">
-				<div class="col-md-8 ml-auto mr-auto text-center">
-					<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
-				</div>
+	<div class="container section">
+		<div class="row">
+			<div class="col-md-8 ml-auto mr-auto text-center">
+				<img src="img/BioTherm_HeatingSystems.png" style="max-width:300px;" class="img-fluid">
+				<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
 			</div>
 		</div>
+	</div>
 
 	</div>
 </div>
