--- a/index.html
+++ b/index.html
@@ -272,24 +272,24 @@
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="post-efficient-heat-greenhouse-winter.html"><img class="img img-raised" src="img/card.jpg"></a>
+									<a href="case-heat-allen.html"><img class="img img-raised" src="img/card.jpg"></a>
 								</div>
 								<div class="card-body">
 									<h6 class="card-category text-info"><i class="far fa-lightbulb fa-2x"></i> Enterprise</h6>
-									<h4 class="card-title"><a href="post-efficient-heat-greenhouse-winter.html">Improving Heating Costs and Plant Health</a></h4>
-									<p class="card-description">If you’re growing your crops year-round using a light deprivation greenhouse, heating costs can be prohibitive, especially in winter. <a href="post-efficient-heat-greenhouse-winter.html"> Read More </a></p>
+									<h4 class="card-title"><a href="case-heat-allen.html">Improving Heating Costs and Plant Health</a></h4>
+									<p class="card-description">Consistent heat at the canopy and at the root media causes more branching, health- ier foliage and less disease pressure. By warming the roots directly, the plant increases nutrient uptake, resulting in greater harvest and healthier fruit.<a href="case-heat-allen.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="post-what-is-root-zone-heating.html"><img class="img img-raised" src="img/card1.jpg"></a>
+									<a href="case-air-sunnyside.html"><img class="img img-raised" src="img/card1.jpg"></a>
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-success"><i class="fas fa-leaf fa-2x"></i> Technique</h6>
-									<h4 class="card-title"><a href="post-what-is-root-zone-heating.html">Efficient C0<sub>2</sub> Enrichment Solutions</a></h4>
-									<p class="card-description">Horticulture engineers have spent years developing heating systems to maintain uniform temperatures within a greenhouse, and all would agree heating from the ground up simply makes the most sense. <a href="post-what-is-root-zone-heating.html"> Read More </a></p>
+									<h4 class="card-title"><a href="case-air-sunnyside.html">Efficient C0<sub>2</sub> Enrichment Solutions</a></h4>
+									<p class="card-description">BioTherm CO2 Enrichment systems provide elevated and uniform CO2 levels using the same equipment that heats the greenhouse. A condensing boiler is the heart of the system, and as it burns fuel, it produces combustion gases rich in CO2.<a href="case-air-sunnyside.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
