--- a/about.html
+++ b/about.html
@@ -157,14 +157,21 @@
 		</div>
 	</div>
 	
+	<div class="maps">
+	<iframe src="https://www.google.com/maps/d/embed?mid=1CL3irhr3rOXj-aplTVfKKo1a4byZF9yn&hl=en" width="640" height="480" style="float:right;"></iframe>	
+	</div>
+	
 	<div class="container">
+		
 	<div class="row">
-		<h4><b>About</b></h4>		
+		<h4><b>About</b></h4>
 		<p>Established in 1980 as&nbsp;BioTherm Engineering, we&nbsp;created the first commercialized root zone heating (RZH) systems for commercial horticulture. BioTherm’s legacy product, all-aluminum SunFin&reg;, was developed in the 1950s and is considered the gold standard (performance rated by AHRI) for institutional greenhouse heating. Our BioTherm MicroClimate&trade; system was introduced in 1980, followed by a constant string of durable heating solutions like StarFin&trade;, DuoFin&trade;, MegaTube&trade;, and GreenPex&trade;.</p>
 		<p>We &nbsp;continued to grow and innovate new solutions for several decades. In&nbsp;2000, we expanded the company with TrueLeaf Technologies to better address the systems integration that the company does worldwide. In 2017 we merged the operations of TrueLeaf into BioTherm and continue to innovate new technologies to help commerical plant growers. Our team have been published in horticultural reference books and textbooks and several members led the process of developing heating guidelines for the National Greenhouse Manufacturers Association. Our deep knowledge comes from many years of experience in this very specialized and demanding field.</p>
 		<p>Our innovative and proven products will deliver years of service, but it is our team of professionals with decades of application experience that makes doing business with BioTherm a world-class experience. We deliver innovative solutions to meet the needs of our&nbsp;clients&nbsp;while contributing&nbsp;to their financial and environmental goals. &nbsp;We provide high quality products with excellent sales and service.&nbsp;</p>
 	</div>
 	</div>
+	
+	
 <!--     *********    TEAM     *********      -->
 <div class="section text-center">
 	<div class="row">
@@ -384,8 +391,10 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
+<script src="js/map.js"></script>
 <script src="js/init.js"></script>
 </body>
 </html>
+
