--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 				<div class="col col-lg-3">
 					<h4 class="card-title" style="color:#fff">Solution Proposal Questionnaire</h4>
 					<p style="color:#fff">to help organize your needs and communicate them to us.</p>
-					<p><a href="files/BioTherm_Brochure.pdf"><button type="button" class="btn btn-secondary"><b>Download</b></button></a></p>
+					<p><a href="files/BioTherm_HeatingPQ_Form.pdf"><button type="button" class="btn btn-secondary"><b>Download</b></button></a></p>
 				</div>
 			</div>
 			<br />
@@ -277,7 +277,7 @@
 								<div class="card-body">
 									<h6 class="card-category text-info"><i class="far fa-lightbulb fa-2x"></i> Enterprise</h6>
 									<h4 class="card-title"><a href="case-heat-allen.html">Improving Heating Costs and Plant Health</a></h4>
-									<p class="card-description">Consistent heat at the canopy and at the root media causes more branching, health- ier foliage and less disease pressure. By warming the roots directly, the plant increases nutrient uptake, resulting in greater harvest and healthier fruit.<a href="case-heat-allen.html"> Read More </a></p>
+									<p class="card-description">Consistent heat at the canopy and at the root media causes more branching, healthier foliage and less disease pressure. By warming the roots directly, the plant increases nutrient uptake, resulting in greater harvest and healthier fruit.<a href="case-heat-allen.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
@@ -313,7 +313,7 @@
 								<div class="card-body ">
 									<h6 class="card-category text-info"><i class="fas fa-chart-line fa-2x"></i> Finance</h6>
 									<h4 class="card-title"><a href="case-about-grants-incentives.html">Offset Capital Improvement Costs</a></h5> </h4>
-									<p class="card-description">through Grants, State Rebates, and Incentives. We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different solutions.  <a href="case-about-grants-incentives.html"> Read More </a></p>
+									<p class="card-description">Through Grants, State Rebates, and Incentives. We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different solutions.  <a href="case-about-grants-incentives.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
